@@ -1,4 +1,7 @@
 2006-11-25 Kurt Maute <Kurt@Maute.us>
+	* src/planner-gantt-background.c:  bug #368186 - patch to paint guide
+	lines behind project start date rather than on top - contributed by
+	Arthur Petitpierre
 	* acinclude.m4:  added -Wno-return-type for compile with database
 	enabled
 	* configure.in
